--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,6 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
   liquibase:
     change-log: db/changelog-master.yml
+  jpa:
+    hibernate:
+      ddl-auto: validate
