--- a/src/main/resources/db/changelog-master.yaml
+++ b/src/main/resources/db/changelog-master.yaml
@@ -8,3 +8,6 @@ databaseChangeLog:
   - include:
       file: changelog/changelog-20220406025401.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/changelog-20220408002310.yaml
+      relativeToChangelogFile: true
