--- a/src/main/resources/db/changelog-master.yaml
+++ b/src/main/resources/db/changelog-master.yaml
@@ -20,3 +20,6 @@ databaseChangeLog:
   - include:
       file: changelog/changelog-20220408004410.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/changelog-20220408004807.yaml
+      relativeToChangelogFile: true
