--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'java'
 }
 
+ext {
+    set('springDocVersion', '1.6.7')
+}
+
 group = 'dev.cvetan'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
@@ -28,6 +32,10 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // spring doc
+    implementation "org.springdoc:springdoc-openapi-ui:$springDocVersion"
+
 }
 
 tasks.named('test') {
