--- a/src/main/resources/db/changelog-master.yaml
+++ b/src/main/resources/db/changelog-master.yaml
@@ -23,3 +23,6 @@ databaseChangeLog:
   - include:
       file: changelog/changelog-20220408004807.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/changelog-20220512021819.yaml
+      relativeToChangelogFile: true
