--- a/src/main/resources/db/changelog-master.yaml
+++ b/src/main/resources/db/changelog-master.yaml
@@ -26,3 +26,6 @@ databaseChangeLog:
   - include:
       file: changelog/changelog-20220512021819.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/changelog-20220512032303.yaml
+      relativeToChangelogFile: true
