Add StudentGroup entity, add assignment type for Subject

--- a/src/main/resources/db/changelog-master.yaml
+++ b/src/main/resources/db/changelog-master.yaml
@@ -29,3 +29,9 @@ databaseChangeLog:
   - include:
       file: changelog/changelog-20220512032303.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/changelog-20220513121513.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: changelog/changelog-20220513121924.yaml
+      relativeToChangelogFile: true
