--- a/src/main/resources/db/changelog-master.yaml
+++ b/src/main/resources/db/changelog-master.yaml
@@ -38,3 +38,6 @@ databaseChangeLog:
   - include:
       file: changelog/changelog-20220513163946.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/changelog-20220513170304.yaml
+      relativeToChangelogFile: true
