--- a/src/main/resources/db/changelog-master.yaml
+++ b/src/main/resources/db/changelog-master.yaml
@@ -44,3 +44,6 @@ databaseChangeLog:
   - include:
       file: changelog/changelog-20220513171452.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/changelog-20220516041741.yaml
+      relativeToChangelogFile: true
